--- a/app/src/main/res/layout/course_actvity.xml
+++ b/app/src/main/res/layout/course_actvity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/course_actvity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,8 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/background"
-    tools:context="com.wlmac.lyonsden2_android.resourceActivities.CourseActvity">
+    android:background="@color/background">
 
     <!-- Period Label -->
     <TextView
