- Fixed all vecotr drawables colour - Fixed ClubList's compatibility with expandable list - Fixed Home Screen time table highlighting - Fixed a bug in Contact that would reset the state of the extra buttons, but not reset their position - Fixed font size in User - Fixed underline issues in User - Fixed info update in User

--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -69,7 +69,7 @@
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="10dp"
                     android:onClick="lateStartLabelPressed"
-
+                    android:visibility="gone"
                     android:textColor="@color/accent"
                     android:textSize="18sp"
                     android:text="@string/HSLateStart"
