--- a/app/src/main/res/drawable/ic_collapse_dark_accent_24dp.xml
+++ b/app/src/main/res/drawable/ic_collapse_dark_accent_24dp.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="@color/accentDark"
+        android:fillColor="#022a64"
         android:pathData="M16.59,8.59L12,13.17 7.41,8.59 6,10l6,6 6,-6z"/>
 </vector>
