--- a/app/src/main/res/layout/lyons_alert_layout.xml
+++ b/app/src/main/res/layout/lyons_alert_layout.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"
+        android:maxLines="1"
         android:textColor="@color/accent"
         android:textSize="@dimen/textSize14Details"
         android:id="@+id/LAInput"/>
