- Fixed CourseDialog line 51 crash - All input fields have appropriate input types - Notification request when log in is complete is moved to end of Guide, does not work - HomeActivity help dialog added in menu bar - Other minor fixes

--- a/app/src/main/res/layout/announcement_activity.xml
+++ b/app/src/main/res/layout/announcement_activity.xml
@@ -52,6 +52,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
+                    android:inputType="textCapWords"
                     android:hint="@string/APSRequiredHint"
                     android:maxLines="1"
                     android:id="@+id/APSTitleField"/>
@@ -160,6 +161,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
+                    android:inputType="textCapWords"
                     android:hint="@string/APSOptionalHint"
                     android:maxLines="1"
                     android:id="@+id/APSLocationField"/>
