--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -19,6 +19,7 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:textColor="@color/copyrightLabelColor"
+        android:paddingBottom="10dp"
         android:gravity="center_horizontal"
         android:textAlignment="center"
         android:id="@+id/SSCopyright" />
