--- a/app/src/main/res/layout/user_activity.xml
+++ b/app/src/main/res/layout/user_activity.xml
@@ -65,7 +65,7 @@
                     android:focusableInTouchMode="false"
                     android:enabled="false"
                     android:clickable="false"
-                    android:inputType="text"
+                    android:inputType="textCapWords"
                     android:id="@+id/USNameField"/>
             </LinearLayout>
 
@@ -154,6 +154,7 @@
                         android:layout_weight="1"
                         android:gravity="start|left"
                         android:text="@string/USLeaderButtonText"
+                        android:textSize="@dimen/textSize13Button"
                         android:paddingBottom="8dp"
                         android:onClick="promptClubCode"
                         android:id="@+id/USLeaderButton" />
@@ -164,6 +165,7 @@
                         android:layout_weight="1"
                         android:gravity="end|right"
                         android:text="@string/USSignOutButtonText"
+                        android:textSize="@dimen/textSize13Button"
                         android:tag="signOut"
                         android:id="@+id/USSignOut"
                         android:onClick="UAButtons" />
@@ -176,6 +178,7 @@
                         android:layout_weight="1"
                         android:gravity="start|left"
                         android:text="@string/USDeleteButtonText"
+                        android:textSize="@dimen/textSize13Button"
                         android:tag="deleteAcc"
                         android:id="@+id/USDelete"
                         android:onClick="UAButtons" />
@@ -186,6 +189,7 @@
                         android:layout_weight="1"
                         android:gravity="end|right"
                         android:text="@string/USResetPassButtonText"
+                        android:textSize="@dimen/textSize13Button"
                         android:tag="resetPass"
                         android:id="@+id/USReset"
                         android:onClick="UAButtons" />
