--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -135,6 +135,7 @@
         android:layout_marginRight="12dp"
         android:layout_marginEnd="12dp"
         android:layout_marginTop="43dp"
+        android:paddingBottom="5dp"
         android:layout_below="@+id/linearLayout"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
