--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -21,6 +21,7 @@
             app:title="@string/HSTitle"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:layout_scrollFlags="scroll|enterAlwaysCollapsed|exitUntilCollapsed"
+            app:itemIconTint="#022a64"
             android:id="@+id/toolbar">
         </android.support.v7.widget.Toolbar>
 
