--- a/app/src/main/res/layout/list_default_item.xml
+++ b/app/src/main/res/layout/list_default_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/defaultCellSize"
+    android:layout_height="wrap_content"
     android:background="@color/listViewBackground"
     android:layout_gravity="start"
     android:orientation="horizontal"
