- Replaced guide images - Implemented pull to refresh in all lists - Fixed the layout of the late start schedule dialog - Made the closing button for guide to be at the center - Fixed guide not showing up after info form bug - Fixed the home opening twice bug - The notification prompt now occurs in home screen

--- a/app/src/main/res/layout/club_activity.xml
+++ b/app/src/main/res/layout/club_activity.xml
@@ -115,8 +115,7 @@
         android:textSize="@dimen/textSize14Details"
         android:id="@+id/ClubSLeaderList"/>
 
-    <!-- Clubs Announcements List -->
-    <ListView
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/ClubSLeaderList"
@@ -125,8 +124,15 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:background="@color/listViewBackground"
-        android:divider="@color/listDivider"
-        android:dividerHeight="1dp"
-        android:id="@+id/ClubSAnnouncements"/>
+        android:id="@+id/ClubSAnnouncementsResfresh">
+
+        <!-- Clubs Announcements List -->
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/listViewBackground"
+            android:divider="@color/listDivider"
+            android:dividerHeight="1dp"
+            android:id="@+id/ClubSAnnouncements"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
