--- a/app/src/main/res/layout/fragment_guide_page.xml
+++ b/app/src/main/res/layout/fragment_guide_page.xml
@@ -66,4 +66,22 @@
             android:layout_alignParentBottom="true"
             android:id="@+id/FGPMainImageView"/>
     </RelativeLayout>
+
+    <!-- Main Page Container -->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="8dp"
+        android:id="@+id/FGPLast">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center_horizontal"
+            android:textAlignment="center"
+            android:textColor="@color/accent"
+            android:onClick="closeGuide"
+            android:text="@string/Page8"/>
+    </RelativeLayout>
 </FrameLayout>
