--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -306,14 +306,20 @@
         </RelativeLayout>
 
         <!-- Announcements Container -->
-        <ListView
+        <android.support.v4.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/HSList"
-            android:layout_gravity="center_horizontal"
-            android:divider="@color/listDivider"
-            android:dividerHeight="1dp"
-            android:layout_marginTop="1dp" />
+            android:id="@+id/HSListRefresh">
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/HSList"
+                android:layout_gravity="center_horizontal"
+                android:divider="@color/listDivider"
+                android:dividerHeight="1dp"
+                android:layout_marginTop="1dp" />
+        </android.support.v4.widget.SwipeRefreshLayout>
 
         <TextView
             android:layout_width="match_parent"
