--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -196,7 +196,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingRight">10dp</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">@dimen/textSize13Button</item>
     </style>
 
     <!-- Course View Themes -->
@@ -220,5 +221,13 @@
         <item name="android:inputType">text</item>
         <item name="android:maxLines">1</item>
         <item name="android:ems">10</item>
+    </style>
+
+    <!-- Late Start Schedule Layout Themes-->
+    <style name="LateSLabel">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:textColor">@color/accentDark</item>
     </style>
 </resources>
