- Retrieve added a removeOneSignalIds method for notification switch in User - AnnouncementActivity only pushes notifications from propose announcement, not clubs - ClubActivity complete/edit button change - InformationFormActivity invalid field indicator changed - UserActivity notification toggle switch added to receive or not receive notifications from announcements - XMLs added

--- a/app/src/main/res/layout/info_activity.xml
+++ b/app/src/main/res/layout/info_activity.xml
@@ -50,6 +50,7 @@
             android:inputType="text|textMultiLine"
             android:focusable="false"
             android:clickable="false"
+            android:fadeScrollbars="false"
             android:focusableInTouchMode="false"
             android:enabled="false"
             android:padding="2dp"
