--- a/app/src/main/res/drawable/text_field_bottom_border_editing.xml
+++ b/app/src/main/res/drawable/text_field_bottom_border_editing.xml
@@ -8,7 +8,7 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="1dp"
-                android:color="@color/navigationBar" />
+                android:color="#9f0005" />
 
             <solid android:color="#00FFFFFF" />
 
