--- a/app/src/main/res/layout/info_activity.xml
+++ b/app/src/main/res/layout/info_activity.xml
@@ -49,9 +49,8 @@
             android:background="@drawable/text_view_default"
             android:inputType="text|textMultiLine"
             android:focusable="false"
-            android:clickable="false"
             android:focusableInTouchMode="false"
-            android:enabled="false"
+            android:scrollbars="vertical"
             android:padding="2dp"
             android:textColor="@color/accent"
             android:textSize="@dimen/textSize20Subtitle"
