--- a/app/src/main/res/drawable/time_table_backgroud.xml
+++ b/app/src/main/res/drawable/time_table_backgroud.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <level-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Full border | Selected period -->
     <item android:maxLevel="0">
         <shape android:shape="rectangle">
             <solid android:color="@color/timeTableBackground"/>
@@ -8,7 +9,7 @@
                 android:width="2dp"/>
         </shape>
     </item>
-
+    <!-- No border | Unselected period -->
     <item android:maxLevel="1">
         <shape android:shape="rectangle">
             <solid android:color="@color/timeTableBackground"/>
@@ -17,7 +18,7 @@
                 android:width="0.25dp"/>
         </shape>
     </item>
-
+    <!-- Left border -->
     <item android:maxLevel="2">
         <layer-list>
             <item>
@@ -36,7 +37,7 @@
             </item>
         </layer-list>
     </item>
-
+    <!-- Right border -->
     <item android:maxLevel="3">
         <layer-list>
             <item>
@@ -55,7 +56,7 @@
             </item>
         </layer-list>
     </item>
-
+    <!-- Left border. thick -->
     <item android:maxLevel="4">
         <layer-list>
             <item>
@@ -73,7 +74,7 @@
             </item>
         </layer-list>
     </item>
-
+    <!-- Right border, thick -->
     <item android:maxLevel="5">
         <layer-list>
             <item>
